--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div id="nav">
+        <h1>Jitter</h1>
+    </div>
+    <div id=""></div>
 </body>
 
 </html>
