--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <title>Jitter</title>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <!-- TinyMCE scripts -->
     <script src="https://cdn.tiny.cloud/1/zj1zwm2f2yron4zx6e7qqn2mbq77ixxqqiy99d7ymcuxpqet/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-    <script src="https://cdn.tiny.cloud/1/zj1zwm2f2yron4zx6e7qqn2mbq77ixxqqiy99d7ymcuxpqet/tinymce/5/jquery.tinymce.min.js" referrerpolicy="origin"></script>
+    <!-- <script src="https://cdn.tiny.cloud/1/zj1zwm2f2yron4zx6e7qqn2mbq77ixxqqiy99d7ymcuxpqet/tinymce/5/jquery.tinymce.min.js" referrerpolicy="origin"></script> -->
 
     <script>
         tinymce.init({
@@ -27,7 +27,6 @@
     </script>
 
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
 </head>
 
 <body>
@@ -39,7 +38,7 @@
             <div class="input-container">
                 <form action id="new-post">
                     <textarea id="inputarea"></textarea>
-                    <button type="submit" id="jeetbutton">Jeet</button>
+                    <button id="jeetbutton">Jeet</button>
                 </form>
             </div>
             <div class="content">
@@ -59,5 +58,7 @@
         </div>
     </div>
 </body>
+
+<script src="rework.js"></script>
 
 </html>
